Refactor documentation structure and improve UI components
- Add new Guides tab to navigation structure
- Create dedicated troubleshooting pages: installation-issues, ide-configuration-issues, application-detection-issues, test-execution-issues
- Convert content to use Steps, Tabs, Accordions, and CardGroup components for better UX
- Update scrollbar styles for dark mode customization
- Reorganize FAQ into accordion format
- Convert MCP tools reference to accordion format
- Update file paths and navigation links
- Improve content formatting and readability across all pages

--- a/get-started/Quick Start.mdx
+++ b/get-started/Quick Start.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Quick Start"
 description: "Choose your preferred way to get started with TestSprite. We offer two approaches to fit different workflows."
+icon: "rocket"
 ---
 
 ## Choose Your Approach
