--- a/mcp/examples.mdx
+++ b/mcp/examples.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Examples"
+title: "MCP Examples"
 description: "Real-world TestSprite MCP Server output from an actual e-commerce project test run."
+icon: "layer-group"
 ---
 
 ## 10-Minute Demo Video
@@ -426,7 +427,3 @@ testsprite_tests/
 ├── TC015_Simulate_checkout_without_real_payment_integration.py
 └── TC016_Local_backend_persistence_with_in_memory_or_JSON_storage.py
 ```
-
----
-
-*This example demonstrates TestSprite MCP Server's complete capabilities from a real e-commerce project test run, showing comprehensive analysis and actionable recommendations.* 
