--- a/mcp/installation.mdx
+++ b/mcp/installation.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Installation"
 description: "Get TestSprite MCP Server up and running in your IDE in under 2 minutes."
+icon: "download"
 ---
 
 ## Prerequisites
@@ -17,7 +18,7 @@ Before installing TestSprite MCP Server, ensure you have:
   </Accordion>
 
   <Accordion title="How do I check my Node.js version?">
-    Run `node --version` to check your version. For detailed setup instructions, see [Node.js Configuration](../configuration/nodejs).
+    Run `node --version` to check your version. For detailed setup instructions, see [Node.js Configuration](../troubleshooting//installation-issues#node-js-version-compatibility).
   </Accordion>
 </AccordionGroup>
 
@@ -105,7 +106,7 @@ The easiest way to install TestSprite MCP Server in Cursor:
   </Tab>
 
   <Tab title="VSCode">
-    1. **Open** the Command Palette <kbd>Cmd/Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>P</kbd>
+    1. **Open** the Command Palette ( <Tooltip tip="Cmd/Ctrl + Shift + P"><kbd>⌘⇧P</kbd></Tooltip> )
     2. **Run** the **MCP: Add Server** command
     3. **Choose** Command (stdio) installation type
     4. **Type** `npx @testsprite/testsprite-mcp@latest` for Command to run
