--- a/mcp/overview.mdx
+++ b/mcp/overview.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Overview"
 description: "The No-Code, No-Prompt Testing Agent That Makes Your Software Work"
+icon: "microchip"
 ---
 
 TestSprite MCP Server transforms your IDE's AI assistant into an intelligent testing agent that can automatically test, debug, and fix your code. No manual test writing, no complex prompts, no testing expertise required.
@@ -14,7 +15,7 @@ TestSprite MCP Server is a
 ## How It Works
 
 Enter the magic command to your coding agent:
-```json icon="file-lines"
+```text icon="file-lines"
 Help me test this project with TestSprite.
 ```
 
