--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Introduction"
 description: "Welcome to TestSprite"
+icon: "book-open"
 ---
 
 TestSprite is the easiest AI software testing agent for fully autonomous testing.
